fix overflow issue

--- a/src/partials/main/Main.css
+++ b/src/partials/main/Main.css
@@ -8,6 +8,7 @@
   animation-name: sunrise;
   z-index: -1;
   transition: 3s;
+  overflow-x: hidden;
 }
 
 .main__content {
